--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink1">#FFEAF1</color>
+    <color name="pink2">#F09CB6</color>
+    <color name="hijau1">#E1F0CF</color>
 </resources>
